{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 31,
  "lineage": "b7601c20-7c44-f7b0-867c-71fadd902a57",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natvpn_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0013a8b27f728d5bd",
            "association_id": "eipassoc-0740eb932a8657ccb",
            "domain": "vpc",
            "id": "eipalloc-0013a8b27f728d5bd",
            "instance": "i-02cdbd599f0e9c861",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0287eb90d14a404fa",
            "private_dns": "ip-172-16-1-10.ap-northeast-2.compute.internal",
            "private_ip": "172.16.1.10",
            "public_dns": "ec2-3-34-71-229.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.71.229",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "capstone-natvpn-eip"
            },
            "tags_all": {
              "Name": "capstone-natvpn-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.natvpn_gateway",
            "module.ec2.data.aws_ami.ubuntu_amd64",
            "module.security_group.aws_security_group.ai_server_sg",
            "module.security_group.aws_security_group.natvpn_sg",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ai_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ef875a25fb979fe",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-0db996a6a86a2532d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db996a6a86a2532d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.medium",
            "ipv6_address_count": 0,
            "key_name": "nat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093e43db7a4cd37c0",
            "private_dns": "ip-172-16-2-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.2.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd4027d0d1f60375",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07de48e5094f09a36",
            "tags": {
              "Name": "AIserver"
            },
            "tags_all": {
              "Name": "AIserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013368ce7154f148a"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu_arm64",
            "module.security_group.aws_security_group.ai_server_sg",
            "module.security_group.aws_security_group.natvpn_sg",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "natvpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08a1c21841a4c7a5f",
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:instance/i-02cdbd599f0e9c861",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02cdbd599f0e9c861",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nat",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0287eb90d14a404fa",
            "private_dns": "ip-172-16-1-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.16.1.10",
            "public_ip": "3.34.71.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8f52075c29ca71e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0671ba51be29e9470",
            "tags": {
              "Name": "NatVPN Gateway"
            },
            "tags_all": {
              "Name": "NatVPN Gateway"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08ac15d6911c736a9"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.ubuntu_amd64",
            "module.security_group.aws_security_group.ai_server_sg",
            "module.security_group.aws_security_group.natvpn_sg",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstone_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:internet-gateway/igw-06cb7d501c0c789f2",
            "id": "igw-06cb7d501c0c789f2",
            "owner_id": "390403881443",
            "tags": {
              "Name": "capstone-igw"
            },
            "tags_all": {
              "Name": "capstone-igw"
            },
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_ai_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-0dd914905c2c63b14",
            "id": "rtb-0dd914905c2c63b14",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0287eb90d14a404fa",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-ai-rt"
            },
            "tags_all": {
              "Name": "capstone-ai-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_instance.natvpn_gateway",
            "module.ec2.data.aws_ami.ubuntu_amd64",
            "module.security_group.aws_security_group.ai_server_sg",
            "module.security_group.aws_security_group.natvpn_sg",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "capstone_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:route-table/rtb-00bc8712216c481e5",
            "id": "rtb-00bc8712216c481e5",
            "owner_id": "390403881443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06cb7d501c0c789f2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "capstone-public-rt"
            },
            "tags_all": {
              "Name": "capstone-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing.aws_internet_gateway.capstone_igw",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstone_ai_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3d7ebd1ac41727d",
            "route_table_id": "rtb-0dd914905c2c63b14",
            "subnet_id": "subnet-07de48e5094f09a36"
          },
          "dependencies": [
            "module.ec2.aws_instance.natvpn_gateway",
            "module.ec2.data.aws_ami.ubuntu_amd64",
            "module.routing.aws_route_table.capstone_ai_rt",
            "module.security_group.aws_security_group.ai_server_sg",
            "module.security_group.aws_security_group.natvpn_sg",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.routing",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "capstone_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c7b3f10489c445a",
            "route_table_id": "rtb-00bc8712216c481e5",
            "subnet_id": "subnet-0671ba51be29e9470"
          },
          "dependencies": [
            "module.routing.aws_internet_gateway.capstone_igw",
            "module.routing.aws_route_table.capstone_public_rt",
            "module.subnet.aws_subnet.capstone_ai_subnet",
            "module.subnet.aws_subnet.capstone_public_subnet",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ai_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-013368ce7154f148a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013368ce7154f148a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "All traffic from NatVPN Gateway",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-08ac15d6911c736a9"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "capstone-ai-server-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-ai-server-sg"
            },
            "tags_all": {
              "Name": "capstone-ai-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.natvpn_sg",
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "natvpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:security-group/sg-08ac15d6911c736a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ac15d6911c736a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "WireGuard VPN",
                "from_port": 51820,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 51820
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/16"
                ],
                "description": "Internal VPC traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "capstone-natvpn-sg",
            "name_prefix": "",
            "owner_id": "390403881443",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "capstone-natvpn-sg"
            },
            "tags_all": {
              "Name": "capstone-natvpn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_ai_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-07de48e5094f09a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07de48e5094f09a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-ai-subnet"
            },
            "tags_all": {
              "Name": "capstone-ai-subnet"
            },
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "capstone_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:subnet/subnet-0671ba51be29e9470",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0671ba51be29e9470",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "390403881443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "capstone-public-subnet"
            },
            "tags_all": {
              "Name": "capstone-public-subnet"
            },
            "vpc_id": "vpc-0507e9eeb2df5c9e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.capstone_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "capstone_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:390403881443:vpc/vpc-0507e9eeb2df5c9e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0104be23848f6cad1",
            "default_route_table_id": "rtb-04f19c8235f491af2",
            "default_security_group_id": "sg-01944c0466c40c428",
            "dhcp_options_id": "dopt-0bb6bf2626d3217a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0507e9eeb2df5c9e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04f19c8235f491af2",
            "owner_id": "390403881443",
            "tags": {
              "Name": "capstone-vpc"
            },
            "tags_all": {
              "Name": "capstone-vpc"
            }
          }
        }
      ]
    }
  ]
}